Trying to fix build errors

--- a/public/404.html
+++ b/public/404.html
@@ -199,9 +199,9 @@
 <nav>
 <a href="/">Home</a>
 
-<a href="/blog/">Blog</a>
-
 <a href="/my-toolbox/">My Toolbox</a>
+
+<a href="/posts/">Posts</a>
 
 </nav>
 </header>
