--- a/public/index.html
+++ b/public/index.html
@@ -210,7 +210,7 @@ For the list of the tools I use, see [[My Toolbox]].">
 <nav>
 <a href="/">Home</a>
 
-<a href="/blog/">Blog</a>
+<a href="/posts/">Blog</a>
 
 <a href="/my-toolbox/">My Toolbox</a>
 
