--- a/public/404.html
+++ b/public/404.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="en-GB">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="shortcut icon" href="http://localhost:1313/images/favicon.jpg" />
+<link rel="shortcut icon" href="https://mykyta.co.uk/images/favicon.jpg" />
 <title>404</title>
 <meta name="title" content="404 Page not found" />
 <meta name="description" content="I :heart: movies" />
 <meta name="keywords" content="3d-modelling,architecture,evergreen,film_making,independent_production,project/uoe," />
 
 
-<meta property="og:url" content="http://localhost:1313/404.html">
+<meta property="og:url" content="https://mykyta.co.uk/404.html">
   <meta property="og:site_name" content="Mykyta&#39;s Blog">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:description" content="I :heart: movies">
   <meta property="og:locale" content="en_GB">
   <meta property="og:type" content="website">
-    <meta property="og:image" content="http://localhost:1313/images/share.png">
+    <meta property="og:image" content="https://mykyta.co.uk/images/share.png">
 
 
 
 
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image" content="http://localhost:1313/images/share.png">
+  <meta name="twitter:image" content="https://mykyta.co.uk/images/share.png">
   <meta name="twitter:title" content="404 Page not found">
   <meta name="twitter:description" content="I :heart: movies">
 
@@ -33,7 +33,7 @@
 
   <meta itemprop="name" content="404 Page not found">
   <meta itemprop="description" content="I :heart: movies">
-  <meta itemprop="image" content="http://localhost:1313/images/share.png">
+  <meta itemprop="image" content="https://mykyta.co.uk/images/share.png">
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
   <style>
@@ -201,7 +201,7 @@
 
 <a href="/my-toolbox/">My Toolbox</a>
 
-<a href="/posts/">Posts</a>
+<a href="/blog/">Posts</a>
 
 </nav>
 </header>
@@ -210,7 +210,15 @@
 <h2>ʕノ•ᴥ•ʔノ ︵ ┻━┻</h2>
 
   </main>
-  <footer>
+  <footer><script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+<script>
+  kofiWidgetOverlay.draw('mykyta_myro', {
+    'type': 'floating-chat',
+    'floating-chat.donateButton.text': 'Support me',
+    'floating-chat.donateButton.background-color': '#323842',
+    'floating-chat.donateButton.text-color': '#fff'
+  });
+</script>
 </footer>
 
   
